# Constraint-Architecture

./: LICENSE  README.md  agent-os-architecture.md  constraint-architecture-post.md  constraint-tee-design.md  pyproject.toml
.github/workflows/: publish.yml
demo/: SCRIPT.md  demo.py
paper/: paper-workshop.tex  paper.tex  supplementary.tex
src/constraint_architecture/: __init__.py  skeleton.py
src/constraint_architecture/demo/: __init__.py  __main__.py  _demo.py
