[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constraint-architecture"
version = "1.5.1"
description = "LLM reasons. Code decides what's allowed. Audit keeps it traceable."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Xu Renwu (续仁舞)", email = "1nour2567@gmail.com"},
]
keywords = [
    "ai-agent",
    "agent-safety",
    "llm-security",
    "guardrails",
    "deterministic-constraints",
    "agent-architecture",
    "audit-trail",
    "constraint-engine",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/1nour2567/Constraint-Architecture"
Documentation = "https://github.com/1nour2567/Constraint-Architecture/blob/main/CONSTRAINT_EN.md"
"Bug Reports" = "https://github.com/1nour2567/Constraint-Architecture/issues"
Source = "https://github.com/1nour2567/Constraint-Architecture"
"Demo (One Click)" = "https://github.com/1nour2567/Constraint-Architecture#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
